# legacy-wizard

./: .gitignore  .gitmodules  Bridge.hs  Form.hs  Main.hs  Makefile  Questionnaire.hs  README.md  transform.sh
DSServer/: ChangeLog.md  DSServer.cabal  Makefile  edit.sh  package.yaml  stack.yaml
DSServer/app/: App.hs  Auth.hs  DigestiveForm.hs  FormEngine  Mailing.hs  Main-Bridge.hs  Main-debug.hs  Main.hs  Model  Page.hs  PageGenerator.hs  Questionnaire.hs  Routes.hs
DSServer/app/API/: Utils.hs
DSServer/app/API/Book/: GetContents.hs
DSServer/app/API/Question/: GetQuestion.hs
DSServer/app/API/Save/: Handler.hs  Url.hs
DSServer/app/Actions/: FormUtils.hs  Info.hs  Responses.hs
DSServer/app/Actions/ChangePassword/: Handler.hs  Url.hs
DSServer/app/Actions/ConfirmRegistration/: Handler.hs  Url.hs
DSServer/app/Actions/EditProfile/: Handler.hs  Url.hs
DSServer/app/Actions/ForgottenPassword/: Handler.hs  Url.hs
DSServer/app/Actions/Login/: Handler.hs  Url.hs
DSServer/app/Actions/LoginScreen/: LoginScreen.hs
DSServer/app/Actions/Logout/: Handler.hs  Url.hs
DSServer/app/Actions/Main/: Handler.hs  Url.hs
DSServer/app/Actions/ManagePlans/: Handler.hs  Url.hs
DSServer/app/Actions/Register/: Handler.hs  Url.hs
DSServer/app/Actions/Registration/: Handler.hs
DSServer/app/Actions/ResetPassword/: Handler.hs  Url.hs
DSServer/app/Actions/ResourcePage/: Handler.hs  Url.hs
DSServer/app/Actions/Save/: Handler.hs  Url.hs
DSServer/app/Persistence/: ActionKey.hs  Book.hs  Plan.hs  Question.hs  Result.hs  Session.hs  User.hs  Utils.hs
DSServer/app/Views/: Base.hs  Info.hs  Logout.hs  Page.hs
DSServer/app/Views/Forms/: Common.hs  Login.hs  Register.hs  Registration.hs
DSServer/app/Views/Pages/: Info.hs  (+3 more)
DSServer/sql/: ActionKey.sql  Book.sql  Plan.sql  Questions.sql  Result.sql  Session.sql  User.sql  init.sql
DSServer/src/: Main.hs  Model  PageGenerator.hs
DSServer/src/Persistence/: Question.hs  User.hs
DSServer/static/: index.html
DSServer/static/css/: Makefile  compile.sh  main.css  main.less
DSServer/static/js/: analytics.js  main.js
(+71 files in other folders)
