name:                DSServer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/DataStewardshipPortal/ds-wizard
license:             Apache-2.0
license-file:        LICENSE
author:              Robert Pergl
maintainer:          perglr@fit.cvut.cz
copyright:           2017 Robert Pergl here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

--library
--  hs-source-dirs:      src
--  exposed-modules:     Lib
--  build-depends:       base >= 4.7 && < 5
--  default-language:    Haskell2010

executable DSServer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  other-extensions:    OverloadedStrings, CPP, NamedFieldPuns, RecordWildCards, FlexibleInstances, TypeSynonymInstances, QuasiQuotes
  build-depends:
    base,
    utf8-string,
    text,
    bytestring,
    mtl,
    containers,
    time,
    random,
    pwstore-fast,
    blaze-markup,
    blaze-html,
    smtp-mail,
    email-validate,
    reroute,
    scotty,
    scotty-cookie,
    digestive-functors,
    digestive-functors-blaze,
    digestive-functors-scotty,
    --hvect,
    wai-middleware-static,
    wai-extra,
    postgresql-simple,
    resource-pool,
    raw-strings-qq
    -- the following are because of Spock-digestive source injection
    --Spock-core,
    --http-types,
    --wai,
    --unordered-containers
  default-language:    Haskell2010

--test-suite DSServer-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , DSServer
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DataStewardshipPortal/ds-wizard
